feat(web-app): connect app-provider

--- a/packages/web-app/src/index.html
+++ b/packages/web-app/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no, viewport-fit=cover">
-    <title>Vite + Vue + TS</title>
-    <meta name="description" content="Vite + Vue + TS">
+    <title>Voicel</title>
+    <meta name="description" content="Web application for multi-party video/audio/screen conferencing">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
